--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Flexbox</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <div class="status">
@@ -17,31 +19,33 @@
             <img src="images/status.png" alt="status">
         </div>
     </div>
-<header class="container">
-    <div class="logobox">
-        <a class="logo menupart" href="#">My<strong>Logo</strong></a>
-    </div>
-    <nav class="menu">
-        <a class="menupart" href="#"><img src="./images/menu pequeno.png" alt="">
-        </a>
-    </nav>
-</header>
-
-<main>
-    <section class="headline">
-        <h1 class="headlinetitle">Hey there. I'm Vitor!</h1>
-        <h2 class="subtitle">I'm a Software Developer</h2>
-        <p>I'm a former Microverse student and right below you can check my main projects! Please contact me if you need any help!</p>
-        <div class="icons">
-            <a href="#" target="_blank"><img src="images/Icon - Linkedin.png" alt="linkedin icon"></a>
-            <a href="#" target="_blank"><img src="images/Icon - Github.png" alt="linkedin icon"></a>
-            <a href="#" target="_blank"><img src="images/Icon - Twitter.png" alt="linkedin icon"></a>
-            <a href="#" target="_blank"><img src="images/Icon - M.png" alt="linkedin icon"></a>
-            <a href="#" target="_blank"><img src="images/Icon - PazEAmor.png" alt="linkedin icon"></a>
+    <header class="container">
+        <div class="logobox">
+            <a class="logo menupart" href="#">My<strong>Logo</strong></a>
         </div>
-    </section>
+        <nav class="menu">
+            <a class="menupart" href="#"><img src="./images/menupequeno.png" alt="">
+            </a>
+        </nav>
+    </header>
 
-</main>
+    <main>
+        <section class="headline">
+            <h1 class="headlinetitle">Hey there. I'm Vitor!</h1>
+            <h2 class="subtitle">I'm a Software Developer</h2>
+            <p>I'm a former Microverse student and right below you can check my main projects! Please contact me if you
+                need any help!</p>
+            <div class="icons">
+                <a href="#" target="_blank"><img src="images/linkedin.png" alt="linkedin icon"></a>
+                <a href="#" target="_blank"><img src="images/github.png" alt="linkedin icon"></a>
+                <a href="#" target="_blank"><img src="images/twitter.png" alt="linkedin icon"></a>
+                <a href="#" target="_blank"><img src="images/M.png" alt="linkedin icon"></a>
+                <a href="#" target="_blank"><img src="images/pazeamor.png" alt="linkedin icon"></a>
+            </div>
+        </section>
+
+    </main>
 
 </body>
+
 </html>
