--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 </head>
 
 <body>
-
     <header class="container">
         <div class="logobox">
             <a class="logo menupart" href="#">My<strong>Logo</strong></a>
         </div>
         <nav class="menu">
-            <a class="menupart" href="#"><img src="./images/menupequeno.png" alt="">
+            <a class="menupart" href="#"><img src="images/menupequeno.png" alt="">
             </a>
         </nav>
     </header>
@@ -36,8 +35,142 @@
             </div>
         </section>
 
-    </main>
+        <section class="workssection">
+            <div class="worksstart">
+                <h1 class="workstitle">My recent works</h1>
+                <img src="images/Vector.png" alt="">
+            </div>
 
+
+            <div class="firstproject">
+                <picture>
+                    <img src="images/backgroundprojects2.png" alt="">
+                </picture>
+                <h2>Multi-Post Stories</h2>
+                <p>
+                    A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard dummy text ever since the 1500s, when an unknown
+                    printer took a standard dummy tet.
+                </p>
+                <ul class="skillsused2">
+                    <li>html</li>
+                    <li>bootstrap</li>
+                    <li>ruby</li>
+                </ul>
+                <button class="firstbuttom">See project</button>
+            </div>
+
+            <div class="worksprojects">
+                <div class="projects">
+                    <button class="buttons">
+                        <p>See Project</p>
+                    </button>
+                    <ul class="skillsused">
+                        <li>html</li>
+                        <li>bootstrap</li>
+                        <li>ruby</li>
+                    </ul>
+                    <p>
+                        A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard
+                    </p>
+                    <h2>
+                        Professional Art Printing Data
+                    </h2>
+                </div>
+
+                <div class="projects">
+                    <button class="buttons">
+                        <p>See Project</p>
+                    </button>
+                    <ul class="skillsused">
+                        <li>html</li>
+                        <li>bootstrap</li>
+                        <li>ruby</li>
+                    </ul>
+                    <p>
+                        A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard
+                    </p>
+                    <h2>
+                        Professional Art Printing Data
+                    </h2>
+                </div>
+
+                <div class="projects">
+                    <button class="buttons">
+                        <p>See Project</p>
+                    </button>
+                    <ul class="skillsused">
+                        <li>html</li>
+                        <li>bootstrap</li>
+                        <li>ruby</li>
+                    </ul>
+                    <p>
+                        A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard
+                    </p>
+                    <h2>
+                        Professional Art Printing Data
+                    </h2>
+                </div>
+            </div>
+        </section>
+
+        <section class="aboutme">
+            <h1>About me</h1>
+            <p>Hello I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
+            <button class="buttom">Get my Resume</button>
+        </section>
+
+        <section class="skills">
+            <img class="divisor" src="images/Vector2.png" alt="">
+
+            <ul>
+                <li><h2>Language</h2></li>
+                <li><h3>Javascript</h3></li>
+                <li><h3>Ruby</h3></li>
+                <li><h3>Html</h3></li>
+                <li><h3>Css</h3></li>
+            </ul>
+
+            <ul>
+                <li><h2>Frameworks</h2></li>
+                <li><h3>Bootstrap</h3></li>
+                <li><h3>Ruby on Rails</h3></li>
+                <li><h3>RSPec</h3></li>
+                <li><h3>CapyBara</h3></li>
+                <li><h3>Selenium</h3></li>
+            </ul>
+
+            <ul>
+                <li><h2>Skills</h2></li>
+                <li><h3>Codekit</h3></li>
+                <li><h3>Github</h3></li>
+                <li><h3>Codepen</h3></li>
+                <li><h3>Gitlab</h3></li>
+                <li><h3>Terminal</h3></li>
+            </ul>
+        </section>
+
+        <section class="formulary">
+            <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in</h2>
+
+            <form class="form" action="" method="POST">
+                <input type="text" name="name" id="name" placeholder="Full name" required>
+                <input type="email" name="email" id="email" placeholder="Email address" required>
+                <textarea name="message" id="message" cols="30" rows="10" placeholder="Enter text here"></textarea>
+                <button class="finalbuttom" type="submit">Get in Touch</button>
+            </form>
+        </section>
+
+    </main>
+    <footer>
+        <div class="footer">
+            <a href="#" target="_blank"><img src="images/instagramfooter.png" alt="linkedin icon"></a>
+            <a href="#" target="_blank"><img src="images/githubfooter.png" alt="linkedin icon"></a>
+            <a href="#" target="_blank"><img src="images/twitterfooter.png" alt="linkedin icon"></a>
+            <a href="#" target="_blank"><img src="images/mfooter.png" alt="linkedin icon"></a>
+            <a href="#" target="_blank"><img src="images/pazeamorfooter.png" alt="linkedin icon"></a>
+        </div>
+        <img src="images/Shape.png" alt="">
+    </footer>
 </body>
 
 </html>
