Fix lint errors

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="worksprojects">
                 <div class="projects">
                     <button class="buttons">
-                        <p>See Project</p>
+                        See Project
                     </button>
                     <ul class="skillsused">
                         <li>html</li>
@@ -79,7 +79,7 @@
 
                 <div class="projects">
                     <button class="buttons">
-                        <p>See Project</p>
+                        See Project
                     </button>
                     <ul class="skillsused">
                         <li>html</li>
@@ -96,7 +96,7 @@
 
                 <div class="projects">
                     <button class="buttons">
-                        <p>See Project</p>
+                        See Project
                     </button>
                     <ul class="skillsused">
                         <li>html</li>
@@ -152,7 +152,7 @@
         <section class="formulary">
             <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in</h2>
 
-            <form class="form" action="" method="POST">
+            <form class="form" method="POST">
                 <input type="text" name="name" id="name" placeholder="Full name" required>
                 <input type="email" name="email" id="email" placeholder="Email address" required>
                 <textarea name="message" id="message" cols="30" rows="10" placeholder="Enter text here"></textarea>
