Add grid to main

--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
 
     <main>
         <section class="headline">
-            <h1 class="headlinetitle">Hey there. I'm Vitor!</h1>
-            <h2 class="subtitle">I'm a Software Developer</h2>
-            <p>I'm a former Microverse student and right below you can check my main projects! Please contact me if you
-                need any help!</p>
-            <div class="icons">
-                <a href="#" target="_blank"><img src="images/linkedin.png" alt="linkedin icon"></a>
-                <a href="#" target="_blank"><img src="images/github.png" alt="linkedin icon"></a>
-                <a href="#" target="_blank"><img src="images/twitter.png" alt="linkedin icon"></a>
-                <a href="#" target="_blank"><img src="images/M.png" alt="linkedin icon"></a>
-                <a href="#" target="_blank"><img src="images/pazeamor.png" alt="linkedin icon"></a>
+            <div class="headlineitems">
+                <h1 class="headlinetitle">Hey there. I'm Vitor!</h1>
+                <h2 class="subtitle">I'm a Software Developer</h2>
+                <p>I'm a former Microverse student and right below you can check my main projects! Please contact me if you
+                    need any help!</p>
+                <div class="icons">
+                    <a href="#" target="_blank"><img src="images/linkedin.png" alt="linkedin icon"></a>
+                    <a href="#" target="_blank"><img src="images/github.png" alt="linkedin icon"></a>
+                    <a href="#" target="_blank"><img src="images/twitter.png" alt="linkedin icon"></a>
+                    <a href="#" target="_blank"><img src="images/M.png" alt="linkedin icon"></a>
+                    <a href="#" target="_blank"><img src="images/pazeamor.png" alt="linkedin icon"></a>
+                </div>
             </div>
         </section>
 
@@ -41,12 +43,11 @@
                 <img src="images/Vector.png" alt="">
             </div>
 
-
             <div class="firstproject">
-                <picture>
-                    <img src="images/backgroundprojects2.png" alt="">
-                </picture>
-                <h2>Multi-Post Stories</h2>
+                <div class="firstprojectpicture">
+                </div>
+                <div class="firstprojecttexts">
+                    <h2>Multi-Post Stories</h2>
                 <p>
                     A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard dummy text ever since the 1500s, when an unknown
                     printer took a standard dummy tet.
@@ -56,10 +57,62 @@
                     <li>bootstrap</li>
                     <li>ruby</li>
                 </ul>
-                <button class="firstbuttom">See project</button>
+                <button class="firstbuttom"><strong>See project</strong></button>
+                </div>
             </div>
 
             <div class="worksprojects">
+                <div class="projects">
+                    <button class="buttons">
+                        See Project
+                    </button>
+                    <ul class="skillsused">
+                        <li>html</li>
+                        <li>bootstrap</li>
+                        <li>ruby</li>
+                    </ul>
+                    <p>
+                        A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard
+                    </p>
+                    <h2>
+                        Professional Art Printing Data
+                    </h2>
+                </div>
+
+                <div class="projects">
+                    <button class="buttons">
+                        See Project
+                    </button>
+                    <ul class="skillsused">
+                        <li>html</li>
+                        <li>bootstrap</li>
+                        <li>ruby</li>
+                    </ul>
+                    <p>
+                        A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard
+                    </p>
+                    <h2>
+                        Professional Art Printing Data
+                    </h2>
+                </div>
+
+                <div class="projects">
+                    <button class="buttons">
+                        See Project
+                    </button>
+                    <ul class="skillsused">
+                        <li>html</li>
+                        <li>bootstrap</li>
+                        <li>ruby</li>
+                    </ul>
+                    <p>
+                        A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard
+                    </p>
+                    <h2>
+                        Professional Art Printing Data
+                    </h2>
+                </div>
+
                 <div class="projects">
                     <button class="buttons">
                         See Project
@@ -120,37 +173,39 @@
         </section>
 
         <section class="skills">
-            <img class="divisor" src="images/Vector2.png" alt="">
+            <div class="divisor"></div>
 
-            <ul>
-                <li><h2>Language</h2></li>
-                <li><h3>Javascript</h3></li>
-                <li><h3>Ruby</h3></li>
-                <li><h3>Html</h3></li>
-                <li><h3>Css</h3></li>
-            </ul>
-
-            <ul>
-                <li><h2>Frameworks</h2></li>
-                <li><h3>Bootstrap</h3></li>
-                <li><h3>Ruby on Rails</h3></li>
-                <li><h3>RSPec</h3></li>
-                <li><h3>CapyBara</h3></li>
-                <li><h3>Selenium</h3></li>
-            </ul>
-
-            <ul>
-                <li><h2>Skills</h2></li>
-                <li><h3>Codekit</h3></li>
-                <li><h3>Github</h3></li>
-                <li><h3>Codepen</h3></li>
-                <li><h3>Gitlab</h3></li>
-                <li><h3>Terminal</h3></li>
-            </ul>
+            <div class="aboutmeskills">
+                <ul>
+                    <li><h2>Language</h2></li>
+                    <li><h3>Javascript</h3></li>
+                    <li><h3>Ruby</h3></li>
+                    <li><h3>Html</h3></li>
+                    <li><h3>Css</h3></li>
+                </ul>
+    
+                <ul>
+                    <li><h2>Frameworks</h2></li>
+                    <li><h3>Bootstrap</h3></li>
+                    <li><h3>Ruby on Rails</h3></li>
+                    <li><h3>RSPec</h3></li>
+                    <li><h3>CapyBara</h3></li>
+                    <li><h3>Selenium</h3></li>
+                </ul>
+    
+                <ul>
+                    <li><h2>Skills</h2></li>
+                    <li><h3>Codekit</h3></li>
+                    <li><h3>Github</h3></li>
+                    <li><h3>Codepen</h3></li>
+                    <li><h3>Gitlab</h3></li>
+                    <li><h3>Terminal</h3></li>
+                </ul>
+            </div>
         </section>
 
         <section class="formulary">
-            <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in</h2>
+            <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
 
             <form class="form" method="POST">
                 <input type="text" name="name" id="name" placeholder="Full name" required>
@@ -159,8 +214,8 @@
                 <button class="finalbuttom" type="submit">Get in Touch</button>
             </form>
         </section>
-
     </main>
+
     <footer>
         <div class="footer">
             <a href="#" target="_blank"><img src="images/instagramfooter.png" alt="linkedin icon"></a>
@@ -171,6 +226,22 @@
         </div>
         <img src="images/Shape.png" alt="">
     </footer>
+    <div class="test">
+        <div class="box1"></div>
+        <div class="box2"></div>
+        <div class="box3"></div>
+        <div class="box4"></div>
+        <div class="box5"></div>
+        <div class="box6"></div>
+    </div>
+    <div class="flextest">
+        <div class="flexbox1"></div>
+        <div class="flexbox2"></div>
+        <div class="flexbox3"></div>
+        <div class="flexbox4"></div>
+        <div class="flexbox5"></div>
+    </div>
+
 </body>
 
 </html>
