--- a/index.html
+++ b/index.html
@@ -172,9 +172,11 @@
             <button class="buttom">Get my Resume</button>
         </section>
 
-        <section class="skills">
+        <div class="divisorbackground">
             <div class="divisor"></div>
+        </div>
 
+        <section class="skills">
             <div class="aboutmeskills">
                 <ul>
                     <li><h2>Language</h2></li>
@@ -207,11 +209,13 @@
         <section class="formulary">
             <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
 
-            <form class="form" method="POST">
-                <input type="text" name="name" id="name" placeholder="Full name" required>
-                <input type="email" name="email" id="email" placeholder="Email address" required>
-                <textarea name="message" id="message" cols="30" rows="10" placeholder="Enter text here"></textarea>
-                <button class="finalbuttom" type="submit">Get in Touch</button>
+            <form action="https://formspree.io/f/mgedddnq" method="post">
+                <ul class="form">
+                    <li><input type="text" name="name" id="name" placeholder="Full name" maxlength="30" required></li>
+                    <li><input type="email" name="email" id="email" placeholder="Email address" required></li>
+                    <li><textarea name="message" id="message" cols="30" rows="10" placeholder="Enter text here" maxlength="500" required></textarea></li>
+                    <li><button class="finalbuttom" type="submit">Get in Touch</button></li>
+                </ul>
             </form>
         </section>
     </main>
@@ -226,22 +230,6 @@
         </div>
         <img src="images/Shape.png" alt="">
     </footer>
-    <div class="test">
-        <div class="box1"></div>
-        <div class="box2"></div>
-        <div class="box3"></div>
-        <div class="box4"></div>
-        <div class="box5"></div>
-        <div class="box6"></div>
-    </div>
-    <div class="flextest">
-        <div class="flexbox1"></div>
-        <div class="flexbox2"></div>
-        <div class="flexbox3"></div>
-        <div class="flexbox4"></div>
-        <div class="flexbox5"></div>
-    </div>
-
 </body>
 
 </html>
