Fix review mistakes

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="logobox">
             <a class="logo menupart" href="#">My<strong>Logo</strong></a>
         </div>
+
         <nav class="menu">
             <a class="menupart" href="#"><img src="images/menupequeno.png" alt="">
             </a>
@@ -21,7 +22,7 @@
     </header>
 
     <main>
-        <section class="headline">
+        <section class="headline">aaaaa
             <div class="headlineitems">
                 <h1 class="headlinetitle">Hey there. I'm Vitor!</h1>
                 <h2 class="subtitle">I'm a Software Developer</h2>
@@ -40,7 +41,7 @@
         <section class="workssection">
             <div class="worksstart">
                 <h1 class="workstitle">My recent works</h1>
-                <img src="images/Vector.png" alt="">
+                <div class="border"></div>
             </div>
 
             <div class="firstproject">
@@ -48,16 +49,16 @@
                 </div>
                 <div class="firstprojecttexts">
                     <h2>Multi-Post Stories</h2>
-                <p>
-                    A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard dummy text ever since the 1500s, when an unknown
-                    printer took a standard dummy tet.
-                </p>
-                <ul class="skillsused2">
-                    <li>html</li>
-                    <li>bootstrap</li>
-                    <li>ruby</li>
-                </ul>
-                <button class="firstbuttom"><strong>See project</strong></button>
+                    <p>
+                        A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard dummy text ever since the 1500s, when an unknown
+                        printer took a standard dummy tet.
+                    </p>
+                    <ul class="skillsused2">
+                        <li>html</li>
+                        <li>bootstrap</li>
+                        <li>ruby</li>
+                    </ul>
+                    <button class="firstbuttom"><strong>See project</strong></button>
                 </div>
             </div>
 
@@ -172,14 +173,15 @@
             <button class="buttom">Get my Resume</button>
         </section>
 
-        <div class="divisorbackground">
-            <div class="divisor"></div>
-        </div>
-
         <section class="skills">
             <div class="aboutmeskills">
                 <ul>
-                    <li><h2>Language</h2></li>
+                    <li>
+                        <div class="signs">
+                            <div class="sign"></div>
+                            <h2>Language</h2>
+                        </div>
+                    </li>
                     <li><h3>Javascript</h3></li>
                     <li><h3>Ruby</h3></li>
                     <li><h3>Html</h3></li>
@@ -187,7 +189,12 @@
                 </ul>
     
                 <ul>
-                    <li><h2>Frameworks</h2></li>
+                    <li>
+                        <div class="signs">
+                            <div class="sign1"></div>
+                            <h2>Frameworks</h2>
+                        </div>
+                    </li>
                     <li><h3>Bootstrap</h3></li>
                     <li><h3>Ruby on Rails</h3></li>
                     <li><h3>RSPec</h3></li>
@@ -196,8 +203,12 @@
                 </ul>
     
                 <ul>
-                    <li><h2>Skills</h2></li>
-                    <li><h3>Codekit</h3></li>
+                    <li>
+                        <div class="signs">
+                            <div class="sign2"></div>
+                            <h2>Skills</h2>
+                        </div>
+                    </li>
                     <li><h3>Github</h3></li>
                     <li><h3>Codepen</h3></li>
                     <li><h3>Gitlab</h3></li>
@@ -207,7 +218,7 @@
         </section>
 
         <section class="formulary">
-            <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
+            <p class="paragraph">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
 
             <form action="https://formspree.io/f/mgedddnq" method="post">
                 <ul class="form">
