--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <header>
         <div class="container">
             <div class="logobox">
-                <a class="logo menupart" href="#">My<strong>Logo</strong></a>
+                <a class="logo menupart neonText2" href="#">My<strong>Logo</strong></a>
             </div>
     
             <nav class="menu">
-                <div>
+                <div class="hoverlogo">
                     <a class="menupart menupartlogo" href="#"><img src="images/menupequeno.png" alt=""></a>
                 </div>
-                <div class="menupartdesktop">
-                    <a href="#">Portfolio</a>
-                    <a href="#">About</a>
-                    <a href="#">Contact</a>
-                    <a href="#"><img src="images/messageicon.png" alt=""></a>
+                <div class="menupartdesktop neonText2">
+                    <a href="#Portfolio">Portfolio</a>
+                    <a href="#Aboutme">About</a>
+                    <a href="#Contact">Contact</a>
+                    <a href="#Formulary"><img src="images/messageicon.png" alt=""></a>
                 </div>
             </nav>
         </div>
@@ -34,14 +34,14 @@
         <section class="headline">
             <div class="headlineitems">
                 <div class="headlinetexts">
-                    <h1 class="headlinetitle">Hey there. I'm Vitor!</h1>
+                    <h1 class="headlinetitle neonText">Hey there. I'm Vitor!</h1>
                     <h2 class="subtitle">I'm a Software Developer</h2>
                     <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
                     </p>
                 </div>
 
                 <div class="icons">
-                    <a href="#" target="_blank"><img src="images/linkedin.png" alt="linkedin icon"></a>
+                    <a href="#" target="_blank"><img src="images/Linkedinicon.svg" alt="linkedin icon"></a>
                     <a href="#" target="_blank"><img src="images/github.png" alt="linkedin icon"></a>
                     <a href="#" target="_blank"><img src="images/twitter.png" alt="linkedin icon"></a>
                     <a href="#" target="_blank"><img src="images/pazeamor.png" alt="linkedin icon"></a>
@@ -53,7 +53,7 @@
 
         <section class="workssection">
             <div class="worksstart">
-                <h1 class="workstitle">My recent works</h1>
+                <h1 class="workstitle" id="Portfolio">My recent works</h1>
                 <div class="border"></div>
             </div>
 
@@ -77,7 +77,7 @@
 
             <div class="worksprojects">
                 <div class="projects">
-                    <button class="buttons">
+                    <button class="buttons neonText2">
                         See Project
                     </button>
                     <ul class="skillsused">
@@ -94,7 +94,7 @@
                 </div>
 
                 <div class="projects">
-                    <button class="buttons">
+                    <button class="buttons neonText2">
                         See Project
                     </button>
                     <ul class="skillsused">
@@ -111,7 +111,7 @@
                 </div>
 
                 <div class="projects">
-                    <button class="buttons">
+                    <button class="buttons neonText2">
                         See Project
                     </button>
                     <ul class="skillsused">
@@ -128,7 +128,7 @@
                 </div>
 
                 <div class="projects">
-                    <button class="buttons">
+                    <button class="buttons neonText2">
                         See Project
                     </button>
                     <ul class="skillsused">
@@ -145,7 +145,7 @@
                 </div>
 
                 <div class="projects">
-                    <button class="buttons">
+                    <button class="buttons neonText2">
                         See Project
                     </button>
                     <ul class="skillsused">
@@ -162,7 +162,7 @@
                 </div>
 
                 <div class="projects">
-                    <button class="buttons">
+                    <button class="buttons neonText2">
                         See Project
                     </button>
                     <ul class="skillsused">
@@ -180,11 +180,11 @@
             </div>
         </section>
 
-        <section class="aboutme">
+        <section class="aboutme" id="Aboutme">
             <div class="aboutmestuff">
-                <h1>About me</h1>
+                <h1 class="neonText">About me</h1>
                 <p>Hello I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
-                <button class="buttom">Get my Resume</button>
+                <button class="buttom neonText2">Get my Resume</button>
             </div>
         </section>
 
@@ -198,7 +198,7 @@
                     <li>
                         <div class="signs">
                             <div class="sign"></div>
-                            <h2>Language</h2>
+                            <h2 class="neonText2">Language</h2>
                         </div>
                     </li>
                     <li><h3>Javascript</h3></li>
@@ -211,7 +211,7 @@
                     <li>
                         <div class="signs">
                             <div class="sign1"></div>
-                            <h2>Frameworks</h2>
+                            <h2 class="neonText2">Frameworks</h2>
                         </div>
                     </li>
                     <li><h3>Bootstrap</h3></li>
@@ -225,7 +225,7 @@
                     <li>
                         <div class="signs">
                             <div class="sign2"></div>
-                            <h2>Skills</h2>
+                            <h2 class="neonText2">Skills</h2>
                         </div>
                     </li>
                     <li><h3>Github</h3></li>
@@ -236,22 +236,24 @@
             </div>
         </section>
 
-        <section class="formulary">
-            <p class="paragraph">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
+        <section class="formularybody" id="Formulary">
+            <div class="formulary">
+                <p class="paragraph">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
 
-            <form action="https://formspree.io/f/mgedddnq" method="post">
-                <ul class="form">
-                    <li><input type="text" name="name" id="name" placeholder="Full name" maxlength="30" required></li>
-                    <li><input type="email" name="email" id="email" placeholder="Email address" required></li>
-                    <li><textarea name="message" id="message" cols="30" rows="10" placeholder="Enter text here" maxlength="500" required></textarea></li>
-                    <li><button class="finalbuttom" type="submit">Get in Touch</button></li>
-                </ul>
-            </form>
+                <form action="https://formspree.io/f/mgedddnq" method="post">
+                    <ul class="form">
+                        <li><input type="text" name="name" id="name" placeholder="Full name" maxlength="30" required></li>
+                        <li><input type="email" name="email" id="email" placeholder="Email address" required></li>
+                        <li><textarea name="message" id="message" cols="30" rows="10" placeholder="Enter text here" maxlength="500" required></textarea></li>
+                        <li><button class="finalbuttom" type="submit">Get in Touch</button></li>
+                    </ul>
+                </form>
+            </div>
         </section>
     </main>
 
     <footer>
-        <div class="footer">
+        <div class="footer" id="Contact">
             <a href="#" target="_blank"><img src="images/instagramfooter.png" alt="linkedin icon"></a>
             <a href="#" target="_blank"><img src="images/githubfooter.png" alt="linkedin icon"></a>
             <a href="#" target="_blank"><img src="images/twitterfooter.png" alt="linkedin icon"></a>
@@ -260,6 +262,7 @@
         </div>
         <img src="images/Shape.png" alt="">
     </footer>
+
 </body>
 
 </html>
