--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flexbox</title>
+    <title>Vitor Guedes Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -263,6 +263,13 @@
         <img src="images/Shape.png" alt="">
     </footer>
 
+    <a href="#">
+        <div class="blind">PwD</div>
+    </a>
+
+    <div class="testarea">
+        <div class="test1box"></div>
+    </div>
 </body>
 
 </html>
