--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <a id="menubutton" class="menupartlogo" onclick="toggleMenu()" href="#"><img src="images/menupequeno.png" alt="hamburgermenu"></a>
 
             <ul class="menupartdesktop neonText2">
-                <li><a href="#Portfolio">Portfolio</a></li>
-                <li><a href="#Aboutme">About</a></li>
-                <li><a href="#Contact">Contact</a></li>
-                <li><a href="#Formulary"><img src="images/messageicon.png" alt=""></a></li>
+                <li><a href="#Portfolio" class="menu-links" onclick="closeMenu()">Portfolio</a></li>
+                <li><a href="#Aboutme" class="menu-links" onclick="closeMenu()">About</a></li>
+                <li><a href="#Contact" class="menu-links" onclick="closeMenu()">Contact</a></li>
+                <li><a href="#Formulary" class="menu-links" onclick="closeMenu()"><img src="images/messageicon.png" alt="contact"></a></li>
             </ul>
         </nav>
     </header>
