--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a class="logo neonText2" href="#">My<strong>Vitor</strong></a>
     
         <nav class="menu">
-            <a id="menubutton" class="menupartlogo" onclick="toggleMenu()" href="#">__</a>
+            <a id="menubutton" class="menupartlogo" onclick="toggleMenu()" href="#"><img src="images/menupequeno.png" alt="menu icon"></a>
 
             <ul class="menupartdesktop neonText2">
                 <li><a href="#Portfolio" class="menu-links" onclick="closeMenu()">Portfolio</a></li>
