--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="container">
-        <a class="logo neonText2" href="#">My<strong>Vitor</strong></a>
+        <a class="logo neonText2" onclick="closeMenu()" href="#">My<strong>Vitor</strong></a>
     
         <nav class="menu">
             <a id="menubutton" class="menupartlogo" onclick="toggleMenu()" href="#"><img src="images/menupequeno.png" alt="menu icon"></a>
