Add modals to project buttons

--- a/index.html
+++ b/index.html
@@ -264,6 +264,24 @@
         <div class="blind">PwD</div>
     </a>
 
+    <div class="modal-container">
+        <div class="modal">
+            <button id="x-button">x</button>
+
+            <h2>Multi Post Stories</h2>
+            <ul class="skillsused2">
+                <li>html</li>
+                <li>bootstrap</li>
+                <li>ruby</li>
+            </ul>
+            <img src="https://picsum.photos/200/300" alt="">
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essent.</p>
+            <button>open</button>
+            <button>close</button>
+
+        </div>
+    </div>
+
     <script src="main.js"></script>
 </body>
 
