Changes on the js for modals

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     
                 <div class="worksprojects">
                     <div class="projects">
-                        <button class="buttons neonText2">
+                        <button id="firstprojectbuttom" class="buttons">
                             See Project
                         </button>
                         <ul class="skillsused">
@@ -264,7 +264,7 @@
         <div class="blind">PwD</div>
     </a>
 
-    <div class="modal-container">
+    <div id="modal-containerID" class="modal-container">
         <div class="modal">
             <button id="x-button">x</button>
 
