--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <li>bootstrap</li>
                             <li>ruby</li>
                         </ul>
-                        <button id="mainprojectbuttom" class="firstbuttom"><strong>See project</strong></button>
+                        <button onclick="showName(1)" id="mainprojectbuttom" class="firstbuttom"><strong>See project</strong></button>
                     </div>
                 </div>
     
@@ -174,6 +174,13 @@
                         </h2>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section>
+            <div id="dinamicProject" class="worksprojects">
+
+
             </div>
         </section>
 
