Fix main project modal

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <li>bootstrap</li>
                             <li>ruby</li>
                         </ul>
-                        <button onclick="showName(1)" id="mainprojectbuttom" class="firstbuttom"><strong>See project</strong></button>
+                        <button onclick="showModal(0)" class="firstbuttom"><strong>See project</strong></button>
                     </div>
                 </div>
 
