Add code-reviewer changes required

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
                         <button onclick="showModal(0)" class="firstbuttom"><strong>See project</strong></button>
                     </div>
                 </div>
+            </div>
+        </section>
 
         <section>
             <div id="dinamicProject" class="worksprojects">
