--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body id="body">
     <header class="container">
         <a class="logo neonText2" onclick="closeMenu()" href="#">My<strong>Vitor</strong></a>
     
@@ -142,21 +142,19 @@
                 <p class="paragraph">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
 
                 <form id="form" action="https://formspree.io/f/mgedddnq" method="post">
-                    <div class="input-control">
+                        
                         <input type="text" name="name" id="name" placeholder="Full name" maxlength="30">
-                        <small class="error"></small>
-                    <div>
-                    <div class="input-control">
-                        <input type="text" name="email" id="email" placeholder="Email address">
-                        <small class="error"></small>
-                    </div>
-                    <!--
-                    <div class="input-control">
+
+                        <div class="emailBorder">
+                            <input type="text" name="email" id="email" placeholder="Email address">
+                        </div>
+
                         <textarea name="message" id="message" cols="30" rows="10" placeholder="Enter text here" maxlength="500"></textarea>
-                        <div class="error"></div>
-                    </div>-->
-                    <button class="finalbuttom" type="submit">Get in Touch</button></li>
-                    <small class="error"></small>
+
+                        <div class="input-control">
+                            <button id="formularyBtn" class="finalbuttom" type="submit">Get in Touch</button>
+                        <small class="error positionmessage"></small>
+                        </div>
                 </form>
             </div>
         </section>
@@ -184,8 +182,6 @@
             </div>
         </div>
     </section>
-
-
 
     <script defer src="main.js"></script>
 </body>
