Vanessa won't find it

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body id="body">
-    <header class="container">
+    <header class="container blur">
         <a class="logo neonText2" onclick="closeMenu()" href="#">My<strong>Vitor</strong></a>
     
         <nav class="menu">
@@ -25,7 +25,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="blur">
         <section class="headline">
             <div class="headlineitems">
                 <div class="headlinetexts">
@@ -160,7 +160,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="blur">
         <div class="footer" id="Contact">
             <a href="#" target="_blank"><img src="images/instagramfooter.png" alt="linkedin icon"></a>
             <a href="#" target="_blank"><img src="images/githubfooter.png" alt="linkedin icon"></a>
