--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
         <img src="images/Shape.png" alt="">
     </footer>
 
-    <a id="testing" href="#" class="neonText2">
-        <div class="blind">PwD</div>
-    </a>
+    <section id="testingDinamic">
+
+    </section>
 
     <section class="modals-section">
         <div id="modal-containerID0" class="modal-container">
@@ -182,6 +182,10 @@
             </div>
         </div>
     </section>
+
+    <a id="testing" href="#" class="neonText2">
+        <div class="blind">PwD</div>
+    </a>
 
     <script defer src="main.js"></script>
 </body>
